--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "react-dom": "^19.0.0",
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.4.0",
-    "react-modal": "^3.16.3"
+    "react-modal": "^3.16.3",
+    "react-sidebar": "^3.0.2",
+    "react-type-animation": "^3.2.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.19.0",
